[tool.poetry]
name = "libmidi_io"
version = "1.0.0"
description = "MIDI I/O utils"
authors = ["Sebastiano Barezzi <barezzisebastiano@gmail.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/python-midi/libmidi_io"

[tool.poetry.dependencies]
python = "^3.8"
libmidi = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
